# my-twitter

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  dump.sh  init.sql  main.py  passwords.py  timestamps.py
src/: app.py  database.py  database.rs  helpers.rs  main.rs  passwords.py  passwords.rs  timestamps.py  timestamps.rs  website.py
src/crypto/: mod.rs
src/database/: account.rs  follow.rs  mod.rs  post.rs  types.rs  vote.rs
src/timestamps/: mod.rs
static/: style.css
static/css/: account.css  base.css  feed.css  login_register.css  post.css
static/js/: main.js
templates/: base.html  base_post.html  create_post.html  feed.html  login.html  post.html  post_likes.html  post_with_reply.html  register.html  reply_post.html  user.html  user_liked.html  user_likes.html
templates/account/: index.html  likes.html
templates/base/: account.html  base_post.html  index.html  post.html  post_with_replies.html  post_with_reply.html  posts.html  posts_with_reply.html  reply_post.html
templates/bases/: account.html  base.html  post.html  post_with_replies.html  post_with_reply.html  posts.html  posts_with_reply.html
templates/post/: feed.html  index.html  likes.html  reply.html
templates/user/: login.html  register.html
