[package]
name = "my-twitter"
version = "0.2.1"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["secrets"] }
sqlx = { version = "0.8.0", features = [
	"runtime-tokio-rustls",
	"postgres",
	"chrono",
] }
serde = "1.0.205"
serde_json = "1.0.122"
futures = "0.3.30"
hmac-sha512 = "1.1.5"
rand = "0.8.5"
dotenvy = "0.15.7"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
chrono = { version = "0.4.38", features = ["serde"] }
